adding more initial endpoint docs
